Initial master branch commit

--- a/public/views/userView.html
+++ b/public/views/userView.html
@@ -1,7 +1,11 @@
 <div class="col-sm-6 col-sm-offset-3">
 	<div class="well">
+		<h5 ng-if="authenticated">Welcome, {{currentUser.name}}</h5>
 		<h3>Users</h3>
-		<button class="btn btn-primary" style="margin-bottom: 10px" ng-click="user.getUsers()">Get Users!</button>
+		<div class="form-group">
+			<button class="btn btn-primary" ng-click="user.getUsers()">Get Users!</button>
+			<button class="btn btn-danger" ng-click="user.logout()">Logout</button>
+		</div>
 		<ul class="list-group" ng-if="user.users">
 			<li class="list-group-item" ng-repeat="user in user.users">
 				<h4>{{user.name}}</h4>
